--- a/Frontend/src/Stylesheets/HomeSection1.module.css
+++ b/Frontend/src/Stylesheets/HomeSection1.module.css
@@ -43,9 +43,8 @@
     align-items: center;
     flex-direction: column;
     color: #999DAA;
-    margin: 0px 5rem;
     margin-bottom: 0.5rem;
-    padding: 0 10px;
+    padding: 0 12rem;
 }
 
 .btnSection {
@@ -67,14 +66,14 @@
 }
 
 .BannerVideo{
-    width: 70vw;
+    width: 80vw;
     box-shadow: 
     -5px -5px 25px  #7EC0D9, 
     10px 10px 1px #fff;
     border-radius: 5px;
 }
 
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
     .container {
         width: 100vw; 
     }
@@ -82,15 +81,18 @@
         font-size: 30px; 
     } */
     .BannerVideo {
-        width: 90vw; 
+        width: 80vw; 
+        /* border: 2px solid red; */
+
     }
     .para {
         width: 90vw;
+        padding: 0 6rem;
     }
 }
 
 
-@media (min-width: 1024px) {
+@media (max-width: 1024px) {
     .container {
         width: 100vw; 
     }
@@ -99,11 +101,16 @@
     } */
     .BannerVideo {
         width: 100vw; 
+        /* margin: 2rem; */
+        margin: 0px;
+        /* border: 2px solid red; */
+        
     }
     .para {
         width: 100vw;
         /* margin: 0px 6rem; */
         margin: 0px;
+        padding: 0 4rem;
     }
 }
 
@@ -121,14 +128,18 @@
     .BannerVideo {
         width: 95vw; 
     }
+    .videoContainer {
+        margin: 2rem;
+    }
 }
 
 @media (max-width: 480px) {
     .title {
-        font-size: 24px;
+        font-size: 22px;
     }
     .para {
         font-size: 14px; 
+        padding: 0 1rem;
     }
     .instrutorBtn {
         /* width: 100%; */
@@ -136,6 +147,10 @@
 
     }
     .BannerVideo {
-        width: 95vw; 
+        width: 100vw;
+        margin: 0px; 
+    }
+    .videoContainer {
+        margin: 2rem;
     }
 }
