--- a/Frontend/src/Stylesheets/Learninglanguage.module.css
+++ b/Frontend/src/Stylesheets/Learninglanguage.module.css
@@ -4,10 +4,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100%;
-    padding: 2.5rem 0px;
+    width: 100vw;
 }
 
+.images {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
 
 .title {
     font-size: 28px;
@@ -38,49 +42,129 @@
     margin-left: -150px;
 }
 
+.btnSection {
+    margin: 1rem;
+}
 
-@media (max-width: 768px) {
-    .title {
-        font-size: 24px; /* Change: Reduced font size for smaller screens */
-    }
 
+@media screen and (max-width: 1200px) {
     .para {
-        width: 80%; /* Change: Increased width for smaller screens */
+        width: 50%;
     }
-
-    .img1,
-    .img2,
-    .img3 {
-        margin-left: 0; /* Change: Removed negative margin */
-        margin-right: 0; /* Change: Removed negative margin */
-        margin-bottom: 20px; /* Change: Adjusted bottom margin */
+    .img1, .img2 , .img3 {
+        width: 450px;
     }
 
     .images {
-        flex-direction: column; /* Change: Stack images vertically */
+        margin: 2rem 4rem;
+    }
+    
+    .img1 {
+        margin-bottom: 100px;
+        margin-right: -10px;
+    }
+
+    .img2 {
+        margin-left: -70px;
+        margin-bottom: 15px;
+    }
+    .img3 {
+        margin-bottom: 25px;
+        margin-left: -100px;
     }
 }
 
-@media (max-width: 480px) {
-    .title {
-        font-size: 20px; /* Change: Further reduced font size for very small screens */
+@media (max-width: 1150px) {
+    .img1 {
+        margin-bottom: 100px;
+        margin-right: -30px;
     }
-
-    .para {
-        width: 90%; /* Change: Increased width to take more space */
+    .img2 {
+        margin-left: -70px;
+        margin-bottom: 15px;
     }
-
-    .img1,
-    .img2,
     .img3 {
-        margin-bottom: 15px; /* Change: Reduced margin at the bottom */
+        margin-bottom: 25px;
+        margin-left: -120px;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    .img1 {
+        margin-bottom: 100px;
+        margin-right: -100px;
+    }
+    .img2 {
+        margin-left: -70px;
+        margin-bottom: 15px;
+    }
+    .img3 {
+        margin-bottom: 25px;
+        margin-left: -140px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .para {
+        width: 60%;
+        margin: 1rem;
+    }
+
+    .title {
+        margin: 1rem;
+    }
+    .img1, .img2 , .img3 {
+        width: 450px;
+        margin: 0px;
     }
 
     .images {
-        gap: 10px; /* Change: Reduced gap between images */
+        flex-direction:column;
+        margin: 4rem 2rem;
     }
 
-    .container {
-        padding: 1.5rem 0px; /* Change: Reduced padding for small screens */
+    
+}
+
+@media screen and (max-width: 780px) {
+    .para {
+        width: 75%;
+    }
+    .images {
+        flex-direction: column;
+    }
+    .img1, .img2, .img3 {
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 610px) {
+    .title {
+        font-size: 24px;
+        text-align:center;
+    }
+    .para {
+        font-size: 14px;
+        width: 85%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .title {
+        font-size: 22px;
+        text-align:center;
+    }
+    .para {
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .title {
+        font-size: 20px;
+        text-align:center;
+    }
+    .para {
+        font-size: 12px;
     }
 }
