--- a/Frontend/src/Stylesheets/navbar.module.css
+++ b/Frontend/src/Stylesheets/navbar.module.css
@@ -9,6 +9,8 @@
     left: 0px;
     width: 100%;
     z-index: 20;
+    border: 0px;
+    border-bottom: 2px solid grey;
 }
 
 .logo{
@@ -20,16 +22,14 @@
     justify-content: space-around;
     align-items: center;
     height: 100%;
-
+    /* border: 2px solid red; */
 }
 
 .nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-
     height: 100%;
-
 }
 
 .navContent {
@@ -60,7 +60,6 @@
 
 .addtionalUserDetailsSection {
     margin: 0px 10px;
-
 }
 
 .addtionalUserDetailsSection .btn {
@@ -78,14 +77,12 @@
     color: #DBDDEA;
     font-size: 16px;
     font-weight: 400;
-    border: 2px solid red;
-    border: 0px;
+    width: 70px;
     padding: 0px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start; 
     align-items: center;
-    margin-top: 20.5px;
-
+    /* margin-top: 20.5px; */
 }
 
 .catalogBtn:hover {
@@ -95,12 +92,12 @@
 .catelogContainer:hover .categoriesContainer {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
-    width: 250px;
+    width: 200px;
     background-color: white;
     position: absolute;
-    transform: translateX(-30%) translateY(10%);
+    transform: translateX(20%) translateY(80%);
     border-radius: 5px;
     opacity: 1;
     visibility: visible;
@@ -120,12 +117,10 @@
 .categoryTitle {
     color:#141414;
     font-size: 17px;
-    width: 210px;
+    width: 180px;
     margin: 5px 10px;
-    /* border: 2px solid red; */
     padding: 3px 10px;
     border-radius: 5px;
-
 }
 
 .NoDataBlock {
@@ -150,14 +145,16 @@
     visibility: hidden;
     position: relative;
     z-index: 10;
-
 }
 
 .catelogContainer {
-    /* border: 2px solid red; */
-    height: 100%;
-    width:  60px;
-    /* border: 2px solid red; */
+    width:  70px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align:center;
+    margin:5px;
 }
 
 .catelogContainer:hover .pointer {
@@ -166,8 +163,100 @@
     width: 30px;
     position: absolute;
     transform: rotate(45deg);
-    top: -4px;
+    top: -6px;
     left: 80px;
     border-radius: 5px;
     z-index: -1;
 } 
+
+/* Desktop navbar is default */
+
+/* Hide hamburger by default */
+
+
+.ham {
+    display: none; 
+    cursor: pointer;
+    font-size: 28px;
+    color: #DBDDEA;
+    background: none;
+    border: none;
+}
+
+
+/* Responsive rules */
+@media (max-width: 768px) {
+    .container {
+        justify-content: space-between;
+        padding: 0px 20px;
+    }
+
+  .navContainer {
+    display: none; /* hide nav links */
+  }
+
+
+  .ham {
+    display: flex; /* show hamburger */
+    justify-content:flex-end;
+    /* border: 2px solid red; */
+    width: 65%;
+  }
+
+  .authContainer {
+    display: none;
+  }
+
+  .navOnMobile {
+    width: 80vw;
+    height: 100vh;
+    position:absolute;
+    top: 8vh;
+    right: 0px;
+    /* border: 2px solid red; */
+    background-color: #2C333F;
+    color : white;
+    /* padding: 10px; */
+  }
+
+  .navContentOnMobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+    font-size: 2rem;
+    /* padding: 0px 10px; */
+  }
+
+  .navContentOnMobile li {
+    /* border: 2px solid red; */
+    padding: 20px 30px;
+    width: 100%;
+    border:0px;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+    /* text-align:center; */
+  }
+    
+  .addtionalUserDetailsSectionOnMobile {
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+    padding: 10px;
+    margin-right: 30px;
+  }
+
+    .addtionalUserDetailsSectionOnMobile .btn {
+        padding: 7px 10px;
+        margin: 10px;
+        color: white;
+        border: 2px solid white;
+        border-radius: 5px;
+        background-color: #2C333F;
+        width: 500px;
+    }
+
+    
+}
