--- a/Frontend/src/Stylesheets/SignupForm.module.css
+++ b/Frontend/src/Stylesheets/SignupForm.module.css
@@ -33,7 +33,7 @@
 }
 
 .signupBtn {
-    width: 70%;
+    width: 90%;
     background-color: #FFD60A;
     color: #000814;
     border: none;
@@ -53,6 +53,7 @@
     align-items: flex-start;
     flex-direction: column;
     /* border: 2px solid red; */
+    width: 50%;
 }
 
 
@@ -64,7 +65,7 @@
 }
 
 .emailSection .input {
-    width:66%;
+    width: 90%;
 }
 
 .phoneNoSection {
@@ -82,7 +83,7 @@
 }
 
 .phoneNoSection div .phoneInput {
-    width: 30%;
+    width: 40%;
     margin: 5px;
     margin-left: 0px;
     padding: 8px;
@@ -98,7 +99,7 @@
 }
 
 .phoneNoSection div:nth-child(2):nth-child(2) {
-    width: 70%;
+    width: 90%;
 }
 
 
@@ -107,18 +108,106 @@
     width: 100%;
 }
 
-.passwordSection .PasswordDiv , .confirmPasswordDiv {
+.passwordSection .PasswordDiv , .passwordSection  .confirmPasswordDiv {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
     flex-direction: column;
     /* border: 2px solid red; */
+    width: 80%;
 }
 
-.confirmPasswordDiv .input {
-    width: 48%;
+.PasswordDiv .input  , .confirmPasswordDiv .input {
+    width: 80%;
 }
 
 .PasswordDiv .label {
     margin: 3px 0px;
+}
+
+
+@media screen and (max-width: 1200px) {
+    .container {
+        padding: 1.5rem;
+    }
+    .PasswordDiv .input,
+    .confirmPasswordDiv .input {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    
+    .passwordSection {
+        flex-direction: row;
+        width: 95%;
+    }
+}
+
+@media screen and (max-width: 780px) {
+
+    .nameSection , .passwordSection {
+        gap: 1rem;
+        flex-direction:column;
+    }
+
+    .nameSection .firstName , .nameSection .lastName {
+        width: 100%;
+    }
+    .form .input,
+    .emailSection .input {
+        width: 100%;
+    } 
+
+    .form {
+        width: 100vw;
+    }
+    .signupBtn {
+        width: 100%;
+    }
+
+    .passwordSection {
+        width: 100%;
+    }
+
+    .passwordSection .PasswordDiv , .passwordSection .confirmPasswordDiv {
+        width: 100%;
+    }
+    /* .phoneNoSection div .phoneInput {
+       
+    } */
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        padding: 1rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .form {
+        padding: 0px;
+    }
+
+    .form .input {
+        font-size: 15px;
+    }
+
+    .signupBtn {
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .form .input {
+        font-size: 14px;
+    }
+
+    .signupBtn {
+        font-size: 14px;
+    }
+
+    .phoneNoSection div .phoneInput {
+        font-size: 14px;
+    }
 }
