--- a/Frontend/src/Stylesheets/Template.module.css
+++ b/Frontend/src/Stylesheets/Template.module.css
@@ -9,14 +9,15 @@
 
 .content {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     flex-direction: column;
     /* border: 2px solid red; */
     height: 80vh;
-    width: 35%;
-    margin: 3rem 0px;
-    padding: 2rem;
+    /* width: 35%; */
+    margin: 10rem 0px;
+    /* padding: 2rem; */
+    margin-left: 4rem;
 }
 
 .title {
@@ -43,12 +44,19 @@
 
 
 .imgContainer {
-    position: relative;
     /* border: 2px solid red; */
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-right: 4rem;
 }
 
 .img {
     /* width: 585px; */
+    /* border: 2px solid red; */
+    
     z-index: 10;
     
 }
@@ -56,8 +64,8 @@
 .frame {
     position: absolute;
     z-index: -1;
-    top: 20px;
-    left: 20px;
+    top: 45px;
+    left: 15px;
 }
 
 .specialText {
@@ -67,6 +75,7 @@
     font-size: 16px;
     line-height: 24px;
     color: #47A5C5;
+    padding:0px 10px;
 }
 
 .btnDiv {
@@ -91,30 +100,194 @@
     background-color: #000814;
     color: #F1F2FF;
 }
-/* 
-.studentBtn:hover {
-    background-color: #000814;
-    color: #F1F2FF;
+
+
+
+@media screen and (max-width: 1200px) {
+    .content {
+        width: 45%;
+        padding: 1rem;
+    }
+    .img {
+        max-width: 500px;
+    }
+    .frame {
+        top: 155px;
+        left:20px;
+        max-width: 500px;
+    }
+    .imgContainer{
+        margin-right: 2rem;
+    }
 }
 
-.InstructorBtn:hover {
-    background-color: #000814;
-    color: #F1F2FF;
+@media screen and (max-width: 1024px) {
+    .container {
+        flex-direction:column-reverse;
+        min-height: 100vh;
+        justify-content: space-between;
+    }
+    .content {
+        width: 80%;
+        padding: 1rem;
+        height: 45vh;
+        text-align:center;
+        display: flex;
+        justify-content:center;
+        align-items:center;
+    }
+    .title {
+        margin: 0px;
+        margin-top: 5rem;
+        font-size: 30px;
+        text-align:center;
+    }
+    .specialText ,.description {
+        
+        font-size: 20px;
+    }
+    .imgContainer{
+        margin-right: 2rem;
+    }
+    .img {
+        max-width: 450px;
+    }
+    .frame {
+        top: 170px;
+        left:20px;
+        max-width: 450px;
+    }
 }
 
-.InstructorBtn {
-    background-color: #585D69;
-    color: #999DAA;
+@media screen and (max-width: 800px) {
+    .container {
+        flex-direction:column-reverse;
+        min-height: 100vh;
+        justify-content: space-between;
+    }
+    .content {
+        width: 80%;
+        text-align: start;
+        align-items: center;
+        /* border: 2px solid red; */
+        justify-content:center;
+        height: 80vh;
+    }
+    .imgContainer {
+        height: 60vh;
+        /* border: 2px solid red; */
+        margin-top: 10rem;
+
+    }
+
+    .frame {
+        top: 80px;
+        left:15px;
+        /* max-width: 400px; */
+    }
+    .btnDiv {
+        justify-content: center;
+    }
+    .form {
+        margin: 1rem 0px 1rem 2rem;
+    }
+
+
+    .title {
+        font-size: 40px;
+    }
+
+    .specialText ,.description {
+        font-size: 20px;
+    }
 }
 
-.studentBtn:hover .InstructorBtn{
-    background-color: #838894;
-    color: #999DAA;
+@media screen and (max-width: 600px) {
+    .content {
+        width: 90%;
+        padding: 1rem;
+    }
+    .title {
+        font-size: 30px;
+        text-align:center;
+    }
+    .specialText ,.description {
+        font-size: 20px;
+        text-align:center;
+    }
+    .imgContainer{
+        margin-right: 2rem;
+    }
+    .img {
+        max-width: 400px;
+    }
+    .frame {
+        top: 100px;
+        left:15px;
+        max-width: 400px;
+    }
+    .form {
+        margin: 1rem 0px 1rem 2rem;
+    }
 }
 
-.InstructorBtn:hover .studentBtn {
-    background-color: #838894;
-    color: #999DAA;
+@media screen and (max-width: 480px) {
+    .title {
+        font-size: 30px;
+    }
+    .description {
+        font-size: 20px;
+        line-height: 22px;
+        text-align:center;
+    }
+    .btn {
+        padding: 8px 14px;
+        font-size: 14px;
+    }
+    .imgContainer{
+        margin: 5rem 2rem;
+        margin-bottom: 0px;
+    }
+    .img {
+        max-width: 330px;
+    }
+    .frame {
+        top: 135px;
+        left: 15px;
+        max-width: 330px;
+    }
+    .form {
+        margin:20px 0px;
+    }
 }
 
- */
+@media screen and (max-width: 350px) {
+    .title {
+        font-size: 30px;
+    }
+    .description {
+        font-size: 20px;
+    }
+    .btn {
+        padding: 6px 12px;
+        font-size: 13px;
+    }
+    .specialText {
+        text-align:center;
+    }
+    .imgContainer{
+        margin: 5rem 2rem;
+        margin-bottom: 0px;
+    }
+    .img {
+        max-width: 300px;
+    }
+    .frame {
+        max-width: 300px;
+        top: 145px;
+        left:10px;
+    }
+    .form {
+        margin:20px 0px;
+    }
+}
